# code-agent

./: .gitignore  README.md  justfile  newdistance.py  pyproject.toml
ai_gen/: newdistance_summary.md  points.txt  zuobiao.txt  代码总结.md  测试总结.md
src/augmented/: agent.py  chat_openai.py  chat_openai1.py  embedding_retriever.py  gradio_mcp_client.py  mcp_client.py  mcp_tools.py  test.py  vector_store.py
src/augmented/utils/: info.py  pretty.py
